# wsforge

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
docs/: api-reference.md  broadcasting.md  deployment.md  error-handling.md  examples.md  extractors.md  faq.md  getting-started.md  handlers.md  installation.md  migration-guide.md  performance.md  readme.md  routing.md  state-management.md  static-files.md  testing.md  troubleshooting.md
examples/chat/: Cargo.toml
examples/chat-web/: Cargo.toml
examples/chat-web/src/: main.rs
examples/chat-web/static/: app.js  index.html  style.css
examples/chat/src/: main.rs
examples/echo/: Cargo.toml
examples/echo/src/: main.rs
examples/realtime-game/: Cargo.toml
examples/realtime-game/src/: main.rs
wsforge/: Cargo.toml  README.md
wsforge-core/: Cargo.toml  README.md
wsforge-core/src/: connection.rs  error.rs  extractor.rs  handler.rs  lib.rs  message.rs  router.rs  state.rs  static_files.rs
wsforge-core/src/middleware/: logger.rs  mod.rs
wsforge-macros/: Cargo.toml  README.md
wsforge-macros/src/: lib.rs
wsforge/src/: lib.rs
