[package]
name = "wsforge"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wsforge-core = { path = "../wsforge-core", version = "0.1.1" }
wsforge-macros = { path = "../wsforge-macros", optional = true, version = "0.1.1" }

[features]
default = ["macros"]
macros = ["wsforge-macros"]
full = ["macros"]
